--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         </nav>  
     
     </header>
+
+    <section id="about" class="section">
+        <header>
+            <h2>안녕하세요.</h2>
+        </header>
+    </section>
     
 </body>
 </html>
