--- a/index.html
+++ b/index.html
@@ -30,8 +30,15 @@
     <section id="about" class="section">
         <header>
             <h2>안녕하세요.</h2>
+            <p>실무에 강한 웹퍼블리셔 <span>김해림</span> 입니다.</p>
         </header>
     </section>
+
+    <secton id="work" class="section">
+        <header></header>
+    </secton>
+    <secton id="fList" class="section"></secton>
+    <secton id="Contact" class="section"></secton>
     
 </body>
 </html>
