--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>포트폴리오</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -17,6 +18,7 @@
                 <div class="tableCell">
                     <ul class="clear">
                         <li><a href=""><span>About</span></a></li>
+                        <li><a href=""><span>Skill</span></a></li>
                         <li><a href=""><span>My Work</span></a></li>
                         <li><a href=""><span>Function List</span></a></li>
                         <li><a href=""><span>Contact Me</span></a></li>
@@ -30,15 +32,19 @@
     <section id="about" class="section">
         <header>
             <h2>안녕하세요.</h2>
-            <p>실무에 강한 웹퍼블리셔 <span>김해림</span> 입니다.</p>
+            <p>코딩에 즐거움을 느끼는 웹퍼블리셔 <span>김해림</span> 입니다.</p>
         </header>
     </section>
 
-    <secton id="work" class="section">
-        <header></header>
-    </secton>
+    <secton id="skill" class="section"></secton>
+
+    <secton id="work" class="section"></secton>
     <secton id="fList" class="section"></secton>
     <secton id="Contact" class="section"></secton>
+
+    <div class="topUp">
+        <i class="fas fa-arrow-up"></i>
+    </div>
     
 </body>
 </html>
