about layout 작업중

--- a/index.html
+++ b/index.html
@@ -29,11 +29,51 @@
     
     </header>
 
-    <section id="about" class="section">
+    <section id="main" class="section">
         <header>
             <h2>안녕하세요.</h2>
             <p>코딩에 즐거움을 느끼는 웹퍼블리셔 <span>김해림</span> 입니다.</p>
         </header>
+    </section>
+
+    <section id="about" class="section">
+        <div class="table">
+            <div class="info content tableCell">
+                <dl>
+                    <dt><span>이름</span></dt>
+                    <dd>김해림</dd>
+                </dl>
+                <dl>
+                    <dt><span>나이</span></dt>
+                    <dd>1995년생 26살</dd>
+                </dl>
+                <dl>
+                    <dt></dt>
+                    <dd></dd>
+                </dl>
+            </div>
+            <div class="picWrap content tableCell"></div>
+        </div>
+        
+        <div class="year tableCell">
+            <ul class="clear">
+                <li>
+                    <span>부천대학교 광고디자인과 졸업</span>
+                    <div class="circle"></div>
+                    <span>2017.02</span>
+                </li>
+                <li>
+                    <span>그린컴퓨터아트 학원 UIUX 과정 수료</span>
+                    <div class="circle"></div>
+                    <span>2019.11</span>
+                </li>
+                <li>
+                    <span>케이체인에서 퍼블리셔 재직중</span>
+                    <div class="circle"></div>
+                    <span>2019.12 - ing</span>
+                </li>
+            </ul>
+        </div>
     </section>
 
     <secton id="skill" class="section"></secton>
