--- a/index.html
+++ b/index.html
@@ -38,21 +38,39 @@
 
     <section id="about" class="section">
         <div class="table">
-            <div class="info content tableCell">
+            <div class="info content tableCell clear">
                 <dl>
-                    <dt><span>이름</span></dt>
+                    <dt>
+                        <span><i class="far fa-smile"></i> Name</span>
+                    </dt>
                     <dd>김해림</dd>
                 </dl>
                 <dl>
-                    <dt><span>나이</span></dt>
+                    <dt><span><i class="fas fa-sort-numeric-up"></i> Age</span></dt>
                     <dd>1995년생 26살</dd>
                 </dl>
                 <dl>
-                    <dt></dt>
-                    <dd></dd>
+                    <dt><span><i class="far fa-address-card"></i> Adress</span></dt>
+                    <dd>서울특별시 양천구</dd>
+                </dl>
+                <dl>
+                    <dt>
+                        <span><i class="fas fa-mobile-alt"></i> Phone</span>
+                        <dd>010-9405-0219</dd>
+                    </dt>
+                </dl>
+                <dl>
+                    <dt><span><i class="fas fa-at"></i> e-mail</span></dt>
+                    <dd>ajmhoho@naver.com</dd>
+                </dl>
+                <dl>
+                    <dt><span><i class="fab fa-github"></i> Github</span></dt>
+                    <dd><a href="https://github.com/haerim95">github.com/haerim95</a></dd>
                 </dl>
             </div>
-            <div class="picWrap content tableCell"></div>
+            <div class="picWrap content tableCell">
+                <div></div>
+            </div>
         </div>
         
         <div class="year tableCell">
@@ -68,7 +86,7 @@
                     <span>2019.11</span>
                 </li>
                 <li>
-                    <span>케이체인에서 퍼블리셔 재직중</span>
+                    <span>㈜케이체인 퍼블리셔 재직중</span>
                     <div class="circle"></div>
                     <span>2019.12 - ing</span>
                 </li>
