--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
+
 </head>
 <body>
     <header id="headerWrap" class="clear">
@@ -65,7 +66,7 @@
                 </dl>
                 <dl>
                     <dt><span><i class="fab fa-github"></i> Github</span></dt>
-                    <dd><a href="https://github.com/haerim95">github.com/haerim95</a></dd>
+                    <dd><a href="https://github.com/haerim95" target="_blank">github.com/haerim95</a></dd>
                 </dl>
             </div>
             <div class="picWrap content tableCell">
@@ -76,21 +77,28 @@
         <div class="year tableCell">
             <ul class="clear">
                 <li>
-                    <span>부천대학교 광고디자인과 졸업</span>
-                    <div class="circle"></div>
-                    <span>2017.02</span>
+                    <div class="row">
+                        <span>부천대학교 광고디자인과 졸업</span>
+                        <span>2017.02</span>
+                        <div class="circle"></div>
+                    </div>
                 </li>
                 <li>
-                    <span>그린컴퓨터아트 학원 UIUX 과정 수료</span>
-                    <div class="circle"></div>
-                    <span>2019.11</span>
+                    <div class="row">
+                        <span>그린컴퓨터아트 학원 UIUX 과정 수료</span>
+                        <span>2019.11</span>
+                        <div class="circle"></div>
+                    </div>
                 </li>
                 <li>
-                    <span>㈜케이체인 퍼블리셔 재직중</span>
-                    <div class="circle"></div>
-                    <span>2019.12 - ing</span>
+                    <div class="row">
+                        <span>㈜케이체인 퍼블리셔 재직중</span>
+                        <span>2019.12 - ing</span>                        
+                        <div class="circle"></div>
+                    </div>
                 </li>
             </ul>
+            <div class="line"></div>
         </div>
     </section>
 
@@ -100,9 +108,10 @@
     <secton id="fList" class="section"></secton>
     <secton id="Contact" class="section"></secton>
 
-    <div class="topUp">
+    <div class="topUp hide">
         <i class="fas fa-arrow-up"></i>
     </div>
     
 </body>
+<script src="/js/index.js"></script>
 </html>
