--- a/index.html
+++ b/index.html
@@ -78,23 +78,26 @@
             <ul class="clear">
                 <li>
                     <div class="row">
-                        <span>부천대학교 광고디자인과 졸업</span>
-                        <span>2017.02</span>
-                        <div class="circle"></div>
+                        <div class="txt">
+                            <span>부천대학교 광고디자인과 졸업</span>
+                            <span>2017.02</span>
+                        </div>
                     </div>
                 </li>
                 <li>
                     <div class="row">
-                        <span>그린컴퓨터아트 학원 UIUX 과정 수료</span>
-                        <span>2019.11</span>
-                        <div class="circle"></div>
+                        <div class="txt">
+                            <span>그린컴퓨터아트 학원 UIUX 과정 수료</span>
+                            <span>2019.11</span>
+                        </div>
                     </div>
                 </li>
                 <li>
                     <div class="row">
-                        <span>㈜케이체인 퍼블리셔 재직중</span>
-                        <span>2019.12 - ing</span>                        
-                        <div class="circle"></div>
+                        <div class="txt">
+                            <span>㈜케이체인 퍼블리셔 재직중</span>
+                            <span>2019.12 - ing</span>     
+                        </div>                   
                     </div>
                 </li>
             </ul>
@@ -108,7 +111,7 @@
     <secton id="fList" class="section"></secton>
     <secton id="Contact" class="section"></secton>
 
-    <div class="topUp hide">
+    <div class="topUp">
         <i class="fas fa-arrow-up"></i>
     </div>
     
