--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <h2>안녕하세요.</h2>
             <p>코딩에 즐거움을 느끼는 웹퍼블리셔 <span>김해림</span> 입니다.</p>
         </header>
+        <img src="" class="mainImg">
     </section>
 
     <section id="about" class="section">
@@ -114,7 +115,8 @@
     <div class="topUp">
         <i class="fas fa-arrow-up"></i>
     </div>
-    
+
+    <script src="/js/bg.js"></script>
+    <script src="/js/index.js"></script>
 </body>
-<script src="/js/index.js"></script>
 </html>
