--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
             <h2>안녕하세요.</h2>
             <p>코딩에 즐거움을 느끼는 웹퍼블리셔 <span>김해림</span> 입니다.</p>
         </header>
-        <img src="" class="mainImg">
     </section>
 
     <section id="about" class="section">
@@ -103,6 +102,9 @@
                 </li>
             </ul>
             <div class="line"></div>
+            <div class="btnSlider">
+                <i class="fas fa-angle-right"></i>
+            </div>
         </div>
     </section>
 
