연혁 작업중

--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
                     </div>
                 </li>
             </ul>
-            <div class="line"></div>
-            <div class="btnSlider">
-                <i class="fas fa-angle-right"></i>
+            <div class="line">
+                <div class="btnSlider">
+                    <i class="fas fa-angle-right fa-2x"></i>
+                </div>
             </div>
         </div>
     </section>
