--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
         </div>
     </section>
 
-    <secton id="skill" class="section"></secton>
+    <secton id="skill" class="section">
+        <ul>
+            <li></li>
+        </ul>
+    </secton>
 
     <secton id="work" class="section"></secton>
     <secton id="fList" class="section"></secton>
