--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
     </section>
 
     <secton id="skill" class="section">
+        <header>
+            <h2>어쩌구 저쩌구 어쩌구 저쩌구</h2>
+        </header>
         <ul>
             <li></li>
         </ul>
@@ -122,6 +125,11 @@
     <div class="topUp">
         <i class="fas fa-arrow-up"></i>
     </div>
+
+
+    <footer>
+        <h2>Copyright</h2>
+    </footer>
 
     <script src="/js/bg.js"></script>
     <script src="/js/index.js"></script>
