--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <secton id="skill" class="section">
         <header>
-            <h2>어쩌구 저쩌구 어쩌구 저쩌구</h2>
+            <h2>어쩌구 저쩌구 어쩌구 저쩌구2312312312</h2>
         </header>
         <ul>
             <li></li>
