--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="main" class="section">
         <header>
             <h2>안녕하세요.</h2>
-            <p>코딩에 즐거움을 느끼는 웹퍼블리셔 <span>김해림</span> 입니다.</p>
+            <p>웹퍼블리셔 <span>김해림</span> 입니다.</p>
         </header>
     </section>
 
