--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <h2>Copyright</h2>
     </footer>
 
-    <script src="/js/bg.js"></script>
-    <script src="/js/index.js"></script>
+    <script src="js/bg.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
