포트폴리오 뼈대 잡는 중

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <section id="main" class="section">
         <header>
             <h2>안녕하세요.</h2>
+            <p>즐겁게 코드를 짜고 싶은</p>
             <p>웹퍼블리셔 <span>김해림</span> 입니다.</p>
         </header>
     </section>
@@ -111,14 +112,96 @@
 
     <secton id="skill" class="section">
         <header>
-            <h2>어쩌구 저쩌구 어쩌구 저쩌구2312312312</h2>
+            <h2>My Skill</h2>
         </header>
         <ul>
-            <li></li>
+            <li>
+                <div class="imgWrap">
+                    <img src="" alt="">
+                </div>
+                <p>HTML5d</p>
+            </li>
+            <li>
+                <div class="imgWrap">
+                    <img src="" alt="">
+                </div>
+                <p>CSS3</p>
+            </li>
+            <li>
+                <div class="imgWrap">
+                    <img src="" alt="">
+                </div>
+                <p>JavaScript</p>
+            </li>
+            <li>
+                <div class="imgWrap">
+                    <img src="" alt="">
+                </div>
+                <p>JQuery</p>
+            </li>
+            <li>
+                <div class="imgWrap">
+                    <img src="" alt="">
+                </div>
+                <p>Git</p>
+            </li>
+        </ul>
+        <h3>To Do :)</h3>
+        <ul>
+            <li>
+                <div class="imgWrap">
+                    <img src="" alt="">
+                </div>
+                <p>React</p>
+                <span>열공중🔥</span>
+            </li>
+            <li>
+                <div class="imgWrap">
+                    <img src="" alt="">
+                </div>
+                <p></p>
+            </li>
         </ul>
     </secton>
 
-    <secton id="work" class="section"></secton>
+    <secton id="work" class="section">
+        <ul>
+            <li>
+                <div class="imgWrap">
+                    <img src="" alt="">
+                </div>
+                <div class="txt">
+                    <p class="title">Publish Soft CMS</p>
+                    <p>
+                        퍼블리시 소프트 CMS 페이지 입니다. 
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="imgWrap">
+                    <img src="" alt="">
+                </div>
+                <div class="txt">
+                    <p class="title">Publish Soft PMS</p>
+                    <p>
+                        퍼블리시 소프트 PMS 페이지 입니다. 
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="imgWrap">
+                    <img src="" alt="">
+                </div>
+                <div class="txt">
+                    <p class="title">인터넷 신문 협회</p>
+                    <p>
+                        2020.00.00 OPEN
+                    </p>
+                </div>
+            </li>
+            <li></li>
+        </ul>
+    </secton>
     <secton id="fList" class="section"></secton>
     <secton id="Contact" class="section"></secton>
 
