--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
     </header>
 
     <section id="main" class="section">
-        <header>
-            <h2>안녕하세요.</h2>
-            <p>즐겁게 코드를 짜고 싶은</p>
-            <p>웹퍼블리셔 <span>김해림</span> 입니다.</p>
-        </header>
+        <header class="fancy"><h2>안녕하세요.</h2><br/><p>즐겁게 코드를 짜고 싶은</p><br/><p>웹퍼블리셔 <span>김해림</span> 입니다.</p></header>
     </section>
 
     <section id="about" class="section">
