작업 리스트 업 중

--- a/index.html
+++ b/index.html
@@ -184,8 +184,12 @@
                 <div class="txt">
                     <p class="title">Publish Soft PMS</p>
                     <p>
-                        퍼블리시 소프트 PMS 페이지 입니다. 
+                        퍼블리시 소프트 PMS <br/>
+                        웹 서비스 구축
                     </p>
+                </div>
+                <div class="hideBox">
+                    HTML / CSS / JQuery
                 </div>
             </li>
             <li>
@@ -195,11 +199,34 @@
                 <div class="txt">
                     <p class="title">인터넷 신문 협회</p>
                     <p>
-                        2020.00.00 OPEN
+                        인터넷 신문 협회
+                        웹 / 모바일 웹 서비스 구축
+                    </p>
+                </div>
+                <div class="hideBox">
+                    HTML / CSS / JQuery
+                </div>
+            </li>
+            <li>
+                <div class="imgWrap">
+                    <img src="" alt="">
+                </div>
+                <div class="txt">
+                    <div class="title">KLB</div>
+                    <p>
+                        KLB
+                        웹 / 모바일 웹 서비스 구축
                     </p>
                 </div>
             </li>
-            <li></li>
+            <li>
+                <div class="imgWrap">
+                    <img src="" alt="">
+                </div>
+                <div class="txt">
+                    <div class="title">퍼블리시 링크 V2</div>
+                </div>
+            </li>
         </ul>
     </secton>
     <secton id="fList" class="section"></secton>
