타이핑 효과

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
     <section id="main" class="section">
         <header id="fancy" class="fancy">
-          <p>안녕하세요</p>
-          <p>매일매일 SKILL UP 진행 중인</p>
-          <p>웹 퍼블리셔 김해림 입니다.</p>
+          <p class="typing1"></p>
+          <p class="typing2"></p>
+          <p class="typing3"></p>
         </header>
     </section>
 
@@ -244,7 +244,8 @@
       <h2>Copyright</h2>
   </footer>
 
-  <script src="js/bg.js"></script>
+  <script src="js/typing.js"></script>
+  <!-- <script src="js/bg.js"></script> -->
   <script src="js/index.js"></script>
 </body>
 </html>
