--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
 
     <section id="main" class="section">
         <header id="fancy" class="fancy">
-          <p class="typing1"></p>
-          <p class="typing2"></p>
-          <p class="typing3"></p>
+          <p><span class="typing1"></span></p>
+          <p><span class="typing2"></span></p>
+          <p><span class="typing3"></span></p>
         </header>
     </section>
 
   <section id="about" class="section">
+      <h2>웹 퍼블리셔 김해림은 어떤 사람? 🤔</h2>
       <div class="table">
           <div class="info content tableCell clear">
               <dl>
@@ -109,7 +110,7 @@
       </div>
   </section>
 
-  <secton id="skill" class="section">
+  <section id="skill" class="section">
       <header>
           <h2>My Skill</h2>
       </header>
@@ -161,13 +162,15 @@
               <p></p>
           </li>
       </ul>
-  </secton>
+  </section>
 
-  <secton id="work" class="section">
+  <section id="work" class="section">
+      <h2>참여한 프로젝트 목록입니다 👏</h3>
       <ul>
           <li>
               <div class="imgWrap">
-                  <img src="" alt="">
+                  <img src="./image/work/publishsoftAdmin1.png" alt="publishsoft admin">
+                  <a href=""><img src="" alt=""></a>
               </div>
               <div class="txt">
                   <p class="title">Publish Soft CMS</p>
@@ -179,6 +182,7 @@
           <li>
               <div class="imgWrap">
                   <img src="" alt="">
+                  <a href=""><img src="" alt=""></a>
               </div>
               <div class="txt">
                   <p class="title">Publish Soft PMS</p>
@@ -194,6 +198,7 @@
           <li>
               <div class="imgWrap">
                   <img src="" alt="">
+                  <a href=""><img src="" alt=""></a>
               </div>
               <div class="txt">
                   <p class="title">인터넷 신문 협회</p>
@@ -209,6 +214,7 @@
           <li>
               <div class="imgWrap">
                   <img src="" alt="">
+                  <a href="http://klb.news/"><img src="" alt=""></a>
               </div>
               <div class="txt">
                   <div class="title">KLB</div>
@@ -217,6 +223,32 @@
                       웹 / 모바일 웹 서비스 구축
                   </p>
               </div>
+          </li>
+          <li>
+            <div class="imgWrap">
+                <img src="" alt="">
+                <a href="https://www.tokenpost.kr/"><img src="" alt=""></a>
+            </div>
+            <div class="txt">
+                <div class="title">토큰포스트</div>
+                <p>
+                    토큰포스트
+                    웹 / 모바일 웹 서비스 유지보수
+                    웹 / 모바일 추가 서비스 구축
+                </p>
+            </div>
+          </li>
+          <li>
+            <div class="imgWrap">
+                <img src="" alt="">
+            </div>
+            <div class="txt">
+                <div class="title">econotimes</div>
+                <p>
+                    econotimes
+                    웹 / 모바일 웹 서비스 유지보수
+                </p>
+            </div>
           </li>
           <li>
               <div class="imgWrap">
@@ -230,10 +262,71 @@
                   </p>
               </div>
           </li>
+          <li>
+            <div class="imgWrap">
+                <img src="" alt="">
+            </div>
+            <div class="txt">
+                <div class="title">코인고스트 V1</div>
+                <p>
+                    코인고스트 V1
+                    웹 / 모바일 웹 서비스 구축 (서비스 중단)
+                </p>
+            </div>
+          </li>
+          <li>
+            <div class="imgWrap">
+                <img src="" alt="">
+            </div>
+            <div class="txt">
+                <div class="title">코인고스트 V2</div>
+                <p>
+                    코인고스트 V2
+                    웹 / 모바일 웹 서비스 구축 (서비스 중단)
+                </p>
+            </div>
+          </li>
+          <li>
+            <div class="imgWrap">
+                <img src="" alt="">
+            </div>
+            <div class="txt">
+                <div class="title">본다빈치</div>
+                <p>
+                    본다빈치
+                    웹 / 모바일 웹 서비스 유지보수
+                </p>
+            </div>
+          </li>
+          <li>
+            <div class="imgWrap">
+                <img src="" alt="">
+            </div>
+            <div class="txt">
+                <div class="title">Publish Protocol</div>
+                <p>
+                    Publish Protocol
+                    웹 서비스 유지 보수
+                    모바일 서비스 구축
+                </p>
+            </div>
+          </li>
+          <li>
+            <div class="imgWrap">
+                <img src="" alt="">
+            </div>
+            <div class="txt">
+                <div class="title">Big Issue</div>
+                <p>
+                    Big Issue
+                    웹 / 모바일 웹 서비스 유지보수
+                </p>
+            </div>
+          </li>
       </ul>
-  </secton>
-  <secton id="fList" class="section"></secton>
-  <secton id="Contact" class="section"></secton>
+  </section>
+  <section id="fList" class="section"></section>
+  <section id="Contact" class="section"></section>
 
   <div class="topUp">
       <i class="fas fa-arrow-up"></i>
